--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vim/bundle/vundle.vim"]
-	path = vim/bundle/vundle.vim
-	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "vim/bundle/vim-surround"]
+	path = vim/bundle/vim-surround
+	url = https://github.com/tpope/vim-surround.git
